# OpenMockLLM

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  QUICKSTART.md  README.md  example_client.py  main.py  pyproject.toml
.github/workflows/: build-and-push.yml
docs/: tei_openapi.json  vllm_openapi.json
openmockllm/: logger.py  logging.py  main.py  main_2.py  security.py  settings.py  utils.py
openmockllm/Mistral/: exceptions.py
openmockllm/Mistral/endpoints/: chat.py  embeddings.py  models.py
openmockllm/Mistral/schemas/: chat.py
openmockllm/mistral/: exceptions.py  schemas.py
openmockllm/mistral/endpoints/: chat.py  embeddings.py  models.py  ocr.py
openmockllm/mistral/schemas/: chat.py  embeddings.py  models.py
openmockllm/mistral/utils/: chat.py  common.py
openmockllm/tei/: exceptions.py  schemas.py
openmockllm/tei/endpoints/: embeddings.py  health.py  info.py  rerank.py
openmockllm/tei/schemas/: core.py  embeddings.py  info.py  rerank.py
openmockllm/tei/utils/: embeddings.py  rerank.py
openmockllm/vLLM/: exceptions.py
openmockllm/vLLM/endpoints/: chat.py  embeddings.py  health.py  models.py
openmockllm/vLLM/schemas/: chat.py  core.py  embeddings.py  models.py
openmockllm/vllm/: exceptions.py
tests/: conftest.py  utils.py
tests/test_mistral/: test_mistral_chat.py  test_mistral_models.py  test_mistral_ocr.py
tests/test_tei/: test_tei_embeddings.py  test_tei_health.py  test_tei_info.py  test_tei_rerank.py
tests/test_vllm/: test_vllm_chat.py  test_vllm_embeddings.py  test_vllm_health.py  test_vllm_models.py
(+11 files in other folders)
